adds array of 5 in table,direction towards adding mac addresses

--- a/BluetoothTutorial/BluetoothTutorial/BluetoothTutorial.csproj
+++ b/BluetoothTutorial/BluetoothTutorial/BluetoothTutorial.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,9 +47,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WebKitBrowser">
-      <HintPath>..\..\..\..\..\Desktop\webkit\WebKit.NET-0.5-bin-cairo\bin\WebKitBrowser.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Device.cs" />
